# real-time-ml-system-2

./: Makefile  README.md  redpanda.yml
services/trade_producer/: Dockerfile  Makefile  dev.env  prod.env  pyproject.toml
services/trade_producer/src/: config.py  kraken_websocket_api.py  main.py
services/trade_to_ohlc/: Makefile  pyproject.toml
services/trade_to_ohlc/src/: main.py
