[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Wilbert Osmond <wilbertosmond99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
quixstreams = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
